--- a/src/catan/html/style.html
+++ b/src/catan/html/style.html
@@ -2,7 +2,10 @@
     :root {
         --r1: calc(var(--r2) * 2/sqrt(3));
         --r2: 10%;
-        --gap:1.5%
+        --gap:1.5%;
+        --smgap: calc(sqrt(3)/2*var(--gap));
+        --p1-color: #2a88bc;
+        --p2-color: #d9300d;
     }
     body {
         display: flex;
@@ -10,7 +13,7 @@
         height: 100vh;
         justify-content: center;
         margin: 0;
-        background: #152441;
+        background: linear-gradient(112deg, #eceddc, #dbbc82);
     }
     .tiles-grid {
         position: relative;
@@ -40,35 +43,35 @@
         fill: #ddcc66;
     }
     .hex[resource="5"] {
-        fill: #c3dbe2;
+        fill: #7d9ea7;
     }
 
     .h1{
-        top: calc(50% - 2*var(--r1) - var(--r2) - 2*sqrt(2)*var(--gap));
+        top: calc(50% - 3*var(--r1) - 2*var(--smgap));
         left: calc(50% - 2*var(--r2) - var(--gap))
     }
     .h2{
-        top: calc(50% - 2*var(--r1) - var(--r2) - 2*sqrt(2)*var(--gap));
+        top: calc(50% - 3*var(--r1) - 2*var(--smgap));
         left: 50%
     }
     .h3{
-        top: calc(50% - 2*var(--r1) - var(--r2) - 2*sqrt(2)*var(--gap));
+        top: calc(50% - 3*var(--r1) - 2*var(--smgap));
         left: calc(50% + 2*var(--r2) + var(--gap))
     }
     .h4{
-        top: calc(50% - var(--r1) - var(--r2)/2 - sqrt(2)*var(--gap));
+        top: calc(50% - 3*var(--r1)/2 - var(--smgap));
         left: calc(50% - 3*var(--r2) - 3*var(--gap)/2)
     }
     .h5{
-        top: calc(50% - var(--r1) - var(--r2)/2 - sqrt(2)*var(--gap));
+        top: calc(50% - 3*var(--r1)/2 - var(--smgap));
         left: calc(50% - var(--r2) - var(--gap)/2)
     }
     .h6{
-        top: calc(50% - var(--r1) - var(--r2)/2 - sqrt(2)*var(--gap));
+        top: calc(50% - 3*var(--r1)/2 - var(--smgap));
         left: calc(50% + var(--r2) + var(--gap)/2)
     }
     .h7{
-        top: calc(50% - var(--r1) - var(--r2)/2 - sqrt(2)*var(--gap));
+        top: calc(50% - 3*var(--r1)/2 - var(--smgap));
         left: calc(50% + 3*var(--r2) + 3*var(--gap)/2)
     }
     .h8{
@@ -92,31 +95,31 @@
         left: calc(50% + 4*var(--r2) + var(--gap)*2)
     }
     .h13{
-        top: calc(50% + var(--r1) + var(--r2)/2 + sqrt(2)*var(--gap));
+        top: calc(50% + 3*var(--r1)/2 + var(--smgap));
         left: calc(50% - 3*var(--r2) - 3*var(--gap)/2)
     }
     .h14{
-        top: calc(50% + var(--r1) + var(--r2)/2 + sqrt(2)*var(--gap));
+        top: calc(50% + 3*var(--r1)/2 + var(--smgap));
         left: calc(50% - var(--r2) - var(--gap)/2)
     }
     .h15{
-        top: calc(50% + var(--r1) + var(--r2)/2 + sqrt(2)*var(--gap));
+        top: calc(50% + 3*var(--r1)/2 + var(--smgap));
         left: calc(50% + var(--r2) + var(--gap)/2)
     }
     .h16{
-        top: calc(50% + var(--r1) + var(--r2)/2 + sqrt(2)*var(--gap));
+        top: calc(50% + 3*var(--r1)/2 + var(--smgap));
         left: calc(50% + 3*var(--r2) + 3*var(--gap)/2)
     }
     .h17{
-        top: calc(50% + 2*var(--r1) + var(--r2) + 2*sqrt(2)*var(--gap));
+        top: calc(50% + 3*var(--r1) + 2*var(--smgap));
         left: calc(50% - 2*var(--r2) - var(--gap))
     }
     .h18{
-        top: calc(50% + 2*var(--r1) + var(--r2) + 2*sqrt(2)*var(--gap));
+        top: calc(50% + 3*var(--r1) + 2*var(--smgap));
         left: 50%
     }
     .h19{
-        top: calc(50% + 2*var(--r1) + var(--r2) + 2*sqrt(2)*var(--gap));
+        top: calc(50% + 3*var(--r1) + 2*var(--smgap));
         left: calc(50% + 2*var(--r2) + var(--gap))
     }
     .number-token {
@@ -159,4 +162,251 @@
     .number-token[number="6"], .number-token[number="8"]{
         color: rgb(255, 0, 34);
     }
+    .building {
+        position: absolute;
+        height: 4%;
+        transform: translate(-50%, -50%);
+        padding: 1.2%;
+        border-radius: 50%;
+        fill: #fff;
+        border: #fffC solid;
+        border-width: 0.4vmin;
+    }
+    .building.p1 {
+        background-color: var(--p1-color);
+    }
+    .building.p2 {
+        background-color: var(--p2-color);
+    }
+
+    .n2 {
+        top: calc(50% - 8*var(--r1)/2 - 2*var(--smgap));
+        left: calc(50% - 2*var(--r2) - 2*var(--gap)/2);
+    }
+    .n4 {
+        top: calc(50% - 8*var(--r1)/2 - 2*var(--smgap));
+        left: calc(50%);
+    }
+    .n6 {
+        top: calc(50% - 8*var(--r1)/2 - 2*var(--smgap));
+        left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
+    }
+
+    .n1 {
+        top: calc(50% - 7*var(--r1)/2 - 2*var(--smgap));
+        left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
+    }
+    .n3 {
+        top: calc(50% - 7*var(--r1)/2 - 2*var(--smgap));
+        left: calc(50% - var(--r2) - var(--gap)/2);
+    }
+    .n5 {
+        top: calc(50% - 7*var(--r1)/2 - 2*var(--smgap));
+        left: calc(50% + var(--r2) + var(--gap)/2);
+    }
+    .n7 {
+        top: calc(50% - 7*var(--r1)/2 - 2*var(--smgap));
+        left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
+    }
+
+    .n9 {
+        top: calc(50% - 5*var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
+    }
+    .n11 {
+        top: calc(50% - 5*var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% - var(--r2) - var(--gap)/2);
+    }
+    .n13 {
+        top: calc(50% - 5*var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
+    }
+    .n15 {
+        top: calc(50% - 5*var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% + var(--r2) + var(--gap)/2);
+    }
+    
+    .n8 {
+        top: calc(50% - 4*var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% - 4*var(--r2) - 4*var(--gap)/2);
+    }
+    .n10 {
+        top: calc(50% - 4*var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% - 2*var(--r2) - 2*var(--gap)/2);
+    }
+    .n12 {
+        top: calc(50% - 4*var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50%);
+    }
+    .n14 {
+        top: calc(50% - 4*var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
+    }
+    .n16 {
+        top: calc(50% - 4*var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% + 4*var(--r2) + 4*var(--gap)/2);
+    }
+
+    .n18 {
+        top: calc(50% - 2*var(--r1)/2 - var(--smgap)/2);
+        left: calc(50% - 4*var(--r2) - 4*var(--gap)/2);
+    }
+    .n20 {
+        top: calc(50% - 2*var(--r1)/2 - var(--smgap)/2);
+        left: calc(50% - 2*var(--r2) - 2*var(--gap)/2);
+    }
+    .n22 {
+        top: calc(50% - 2*var(--r1)/2 - var(--smgap)/2);
+        left: calc(50%);
+    }
+    .n24 {
+        top: calc(50% - 2*var(--r1)/2 - var(--smgap)/2);
+        left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
+    }
+    .n26 {
+        top: calc(50% - 2*var(--r1)/2 - var(--smgap)/2);
+        left: calc(50% + 4*var(--r2) + 4*var(--gap)/2);
+    }
+
+    .n17 {
+        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% - 5*var(--r2) - 5*var(--gap)/2);
+    }
+    .n19 {
+        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
+    }
+    .n21 {
+        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% - var(--r2) - var(--gap)/2);
+    }
+    .n23 {
+        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
+    }
+    .n25 {
+        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% + var(--r2) + var(--gap)/2);
+    }
+    .n27 {
+        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+        left: calc(50% + 5*var(--r2) + 5*var(--gap)/2);
+    }
+
+    /* Flip */
+
+    .n49 {
+        top: calc(50% + 8*var(--r1)/2 + 2*var(--smgap));
+        left: calc(50% - 2*var(--r2) - 2*var(--gap)/2);
+    }
+    .n51 {
+        top: calc(50% + 8*var(--r1)/2 + 2*var(--smgap));
+        left: calc(50%);
+    }
+    .n53 {
+        top: calc(50% + 8*var(--r1)/2 + 2*var(--smgap));
+        left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
+    }
+
+    .n48 {
+        top: calc(50% + 7*var(--r1)/2 + 2*var(--smgap));
+        left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
+    }
+    .n50 {
+        top: calc(50% + 7*var(--r1)/2 + 2*var(--smgap));
+        left: calc(50% - var(--r2) - var(--gap)/2);
+    }
+    .n52 {
+        top: calc(50% + 7*var(--r1)/2 + 2*var(--smgap));
+        left: calc(50% + var(--r2) + var(--gap)/2);
+    }
+    .n54 {
+        top: calc(50% + 7*var(--r1)/2 + 2*var(--smgap));
+        left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
+    }
+
+    .n40 {
+        top: calc(50% + 5*var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
+    }
+    .n42 {
+        top: calc(50% + 5*var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% - var(--r2) - var(--gap)/2);
+    }
+    .n44 {
+        top: calc(50% + 5*var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
+    }
+    .n46 {
+        top: calc(50% + 5*var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% + var(--r2) + var(--gap)/2);
+    }
+    
+    .n39 {
+        top: calc(50% + 4*var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% - 4*var(--r2) - 4*var(--gap)/2);
+    }
+    .n41 {
+        top: calc(50% + 4*var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% - 2*var(--r2) - 2*var(--gap)/2);
+    }
+    .n43 {
+        top: calc(50% + 4*var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50%);
+    }
+    .n45 {
+        top: calc(50% + 4*var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
+    }
+    .n47 {
+        top: calc(50% + 4*var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% + 4*var(--r2) + 4*var(--gap)/2);
+    }
+
+    .n29 {
+        top: calc(50% + 2*var(--r1)/2 + var(--smgap)/2);
+        left: calc(50% - 4*var(--r2) - 4*var(--gap)/2);
+    }
+    .n31 {
+        top: calc(50% + 2*var(--r1)/2 + var(--smgap)/2);
+        left: calc(50% - 2*var(--r2) - 2*var(--gap)/2);
+    }
+    .n33 {
+        top: calc(50% + 2*var(--r1)/2 + var(--smgap)/2);
+        left: calc(50%);
+    }
+    .n35 {
+        top: calc(50% + 2*var(--r1)/2 + var(--smgap)/2);
+        left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
+    }
+    .n37 {
+        top: calc(50% + 2*var(--r1)/2 + var(--smgap)/2);
+        left: calc(50% + 4*var(--r2) + 4*var(--gap)/2);
+    }
+
+    .n28 {
+        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% - 5*var(--r2) - 5*var(--gap)/2);
+    }
+    .n30 {
+        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
+    }
+    .n32 {
+        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% - var(--r2) - var(--gap)/2);
+    }
+    .n34 {
+        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
+    }
+    .n36 {
+        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% + var(--r2) + var(--gap)/2);
+    }
+    .n38 {
+        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+        left: calc(50% + 5*var(--r2) + 5*var(--gap)/2);
+    }
+
     </style>
