--- a/src/catan/html/style.html
+++ b/src/catan/html/style.html
@@ -164,6 +164,7 @@
     }
     .building {
         position: absolute;
+        z-index: 1;
         height: 4%;
         transform: translate(-50%, -50%);
         padding: 1.2%;
@@ -192,221 +193,245 @@
         left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
     }
 
-    .n1 {
+    .n1, .r1 {
         top: calc(50% - 7*var(--r1)/2 - 2*var(--smgap));
         left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
     }
-    .n3 {
+    .n3, .r2, .r3 {
         top: calc(50% - 7*var(--r1)/2 - 2*var(--smgap));
         left: calc(50% - var(--r2) - var(--gap)/2);
     }
-    .n5 {
+    .n5, .r4,.r5 {
         top: calc(50% - 7*var(--r1)/2 - 2*var(--smgap));
         left: calc(50% + var(--r2) + var(--gap)/2);
     }
-    .n7 {
+    .n7, .r6 {
         top: calc(50% - 7*var(--r1)/2 - 2*var(--smgap));
         left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
     }
 
-    .n9 {
+    .n9, .r7 {
         top: calc(50% - 5*var(--r1)/2 - 3*var(--smgap)/2);
         left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
     }
-    .n11 {
+    .n11, .r8 {
         top: calc(50% - 5*var(--r1)/2 - 3*var(--smgap)/2);
         left: calc(50% - var(--r2) - var(--gap)/2);
     }
-    .n13 {
+    .n13, .r9 {
         top: calc(50% - 5*var(--r1)/2 - 3*var(--smgap)/2);
         left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
     }
-    .n15 {
+    .n15, .r10 {
         top: calc(50% - 5*var(--r1)/2 - 3*var(--smgap)/2);
         left: calc(50% + var(--r2) + var(--gap)/2);
     }
     
-    .n8 {
+    .n8, .r11 {
         top: calc(50% - 4*var(--r1)/2 - 3*var(--smgap)/2);
         left: calc(50% - 4*var(--r2) - 4*var(--gap)/2);
     }
-    .n10 {
+    .n10, .r12, .r13 {
         top: calc(50% - 4*var(--r1)/2 - 3*var(--smgap)/2);
         left: calc(50% - 2*var(--r2) - 2*var(--gap)/2);
     }
-    .n12 {
+    .n12, .r14, .r15{
         top: calc(50% - 4*var(--r1)/2 - 3*var(--smgap)/2);
         left: calc(50%);
     }
-    .n14 {
+    .n14, .r16, .r17 {
         top: calc(50% - 4*var(--r1)/2 - 3*var(--smgap)/2);
         left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
     }
-    .n16 {
+    .n16, .r18 {
         top: calc(50% - 4*var(--r1)/2 - 3*var(--smgap)/2);
         left: calc(50% + 4*var(--r2) + 4*var(--gap)/2);
     }
 
-    .n18 {
+    .n18, .r19 {
         top: calc(50% - 2*var(--r1)/2 - var(--smgap)/2);
         left: calc(50% - 4*var(--r2) - 4*var(--gap)/2);
     }
-    .n20 {
+    .n20, .r20 {
         top: calc(50% - 2*var(--r1)/2 - var(--smgap)/2);
         left: calc(50% - 2*var(--r2) - 2*var(--gap)/2);
     }
-    .n22 {
+    .n22, .r21 {
         top: calc(50% - 2*var(--r1)/2 - var(--smgap)/2);
         left: calc(50%);
     }
-    .n24 {
+    .n24, .r22 {
         top: calc(50% - 2*var(--r1)/2 - var(--smgap)/2);
         left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
     }
-    .n26 {
+    .n26, .r23 {
         top: calc(50% - 2*var(--r1)/2 - var(--smgap)/2);
         left: calc(50% + 4*var(--r2) + 4*var(--gap)/2);
     }
 
-    .n17 {
-        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+    .n17, .r24 {
+        top: calc(50% - var(--r1)/2 - var(--smgap)/2);
         left: calc(50% - 5*var(--r2) - 5*var(--gap)/2);
     }
-    .n19 {
-        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+    .n19, .r25, .r26{
+        top: calc(50% - var(--r1)/2 - var(--smgap)/2);
         left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
     }
-    .n21 {
-        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+    .n21, .r27, .r28 {
+        top: calc(50% - var(--r1)/2 - var(--smgap)/2);
         left: calc(50% - var(--r2) - var(--gap)/2);
     }
-    .n23 {
-        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+    .n23, .r29, .r30{
+        top: calc(50% - var(--r1)/2 - var(--smgap)/2);
         left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
     }
-    .n25 {
-        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+    .n25, .r31, .r32 {
+        top: calc(50% - var(--r1)/2 - var(--smgap)/2);
         left: calc(50% + var(--r2) + var(--gap)/2);
     }
-    .n27 {
-        top: calc(50% - var(--r1)/2 - 3*var(--smgap)/2);
+    .n27, .r33 {
+        top: calc(50% - var(--r1)/2 - var(--smgap)/2);
         left: calc(50% + 5*var(--r2) + 5*var(--gap)/2);
     }
 
     /* Flip */
 
-    .n49 {
+    .n49, .r67, .r68 {
         top: calc(50% + 8*var(--r1)/2 + 2*var(--smgap));
         left: calc(50% - 2*var(--r2) - 2*var(--gap)/2);
     }
-    .n51 {
+    .n51, .r69, .r70{
         top: calc(50% + 8*var(--r1)/2 + 2*var(--smgap));
         left: calc(50%);
     }
-    .n53 {
+    .n53, .r71, .r72 {
         top: calc(50% + 8*var(--r1)/2 + 2*var(--smgap));
         left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
     }
 
-    .n48 {
+    .n48, .r63 {
         top: calc(50% + 7*var(--r1)/2 + 2*var(--smgap));
         left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
     }
-    .n50 {
+    .n50, .r64 {
         top: calc(50% + 7*var(--r1)/2 + 2*var(--smgap));
         left: calc(50% - var(--r2) - var(--gap)/2);
     }
-    .n52 {
+    .n52, .r65 {
         top: calc(50% + 7*var(--r1)/2 + 2*var(--smgap));
         left: calc(50% + var(--r2) + var(--gap)/2);
     }
-    .n54 {
+    .n54, .r66 {
         top: calc(50% + 7*var(--r1)/2 + 2*var(--smgap));
         left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
     }
 
-    .n40 {
+    .n40, .r55, .r56 {
         top: calc(50% + 5*var(--r1)/2 + 3*var(--smgap)/2);
         left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
     }
-    .n42 {
+    .n42, .r57, .r58 {
         top: calc(50% + 5*var(--r1)/2 + 3*var(--smgap)/2);
         left: calc(50% - var(--r2) - var(--gap)/2);
     }
-    .n44 {
+    .n44, .r59, .r60 {
         top: calc(50% + 5*var(--r1)/2 + 3*var(--smgap)/2);
         left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
     }
-    .n46 {
+    .n46, .r61, .r62 {
         top: calc(50% + 5*var(--r1)/2 + 3*var(--smgap)/2);
         left: calc(50% + var(--r2) + var(--gap)/2);
     }
     
-    .n39 {
+    .n39, .r50 {
         top: calc(50% + 4*var(--r1)/2 + 3*var(--smgap)/2);
         left: calc(50% - 4*var(--r2) - 4*var(--gap)/2);
     }
-    .n41 {
+    .n41, .r51 {
         top: calc(50% + 4*var(--r1)/2 + 3*var(--smgap)/2);
         left: calc(50% - 2*var(--r2) - 2*var(--gap)/2);
     }
-    .n43 {
+    .n43, .r52 {
         top: calc(50% + 4*var(--r1)/2 + 3*var(--smgap)/2);
         left: calc(50%);
     }
-    .n45 {
+    .n45, .r53 {
         top: calc(50% + 4*var(--r1)/2 + 3*var(--smgap)/2);
         left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
     }
-    .n47 {
+    .n47, .r54 {
         top: calc(50% + 4*var(--r1)/2 + 3*var(--smgap)/2);
         left: calc(50% + 4*var(--r2) + 4*var(--gap)/2);
     }
 
-    .n29 {
+    .n29, .r40, .r41 {
         top: calc(50% + 2*var(--r1)/2 + var(--smgap)/2);
         left: calc(50% - 4*var(--r2) - 4*var(--gap)/2);
     }
-    .n31 {
+    .n31, .r42, .r43 {
         top: calc(50% + 2*var(--r1)/2 + var(--smgap)/2);
         left: calc(50% - 2*var(--r2) - 2*var(--gap)/2);
     }
-    .n33 {
+    .n33, .r44, .r45{
         top: calc(50% + 2*var(--r1)/2 + var(--smgap)/2);
         left: calc(50%);
     }
-    .n35 {
+    .n35, .r46, .r47 {
         top: calc(50% + 2*var(--r1)/2 + var(--smgap)/2);
         left: calc(50% + 2*var(--r2) + 2*var(--gap)/2);
     }
-    .n37 {
+    .n37 , .r48, .r49{
         top: calc(50% + 2*var(--r1)/2 + var(--smgap)/2);
         left: calc(50% + 4*var(--r2) + 4*var(--gap)/2);
     }
 
-    .n28 {
-        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+    .n28, .r34 {
+        top: calc(50% + var(--r1)/2 + var(--smgap)/2);
         left: calc(50% - 5*var(--r2) - 5*var(--gap)/2);
     }
-    .n30 {
-        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+    .n30, .r35 {
+        top: calc(50% + var(--r1)/2 + var(--smgap)/2);
         left: calc(50% - 3*var(--r2) - 3*var(--gap)/2);
     }
-    .n32 {
-        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+    .n32, .r36 {
+        top: calc(50% + var(--r1)/2 + var(--smgap)/2);
         left: calc(50% - var(--r2) - var(--gap)/2);
     }
-    .n34 {
-        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+    .n34, .r37 {
+        top: calc(50% + var(--r1)/2 + var(--smgap)/2);
         left: calc(50% + 3*var(--r2) + 3*var(--gap)/2);
     }
-    .n36 {
-        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+    .n36, .r38 {
+        top: calc(50% + var(--r1)/2 + var(--smgap)/2);
         left: calc(50% + var(--r2) + var(--gap)/2);
     }
-    .n38 {
-        top: calc(50% + var(--r1)/2 + 3*var(--smgap)/2);
+    .n38, .r39 {
+        top: calc(50% + var(--r1)/2 + var(--smgap)/2);
         left: calc(50% + 5*var(--r2) + 5*var(--gap)/2);
     }
 
+    .road {
+        position: absolute;
+        width: 2%;
+        height: var(--r1);
+        background-color: #000;
+        translate: -50% -100%;
+        transform-origin: center bottom;
+        border-radius: 20%;
+    }
+
+    .road.p1 {
+        background-color: var(--p1-color);
+    }
+    .road.p2 {
+        background-color: var(--p2-color);
+    }
+
+    .r1, .r3, .r5, .r11, .r13, .r15, .r17, .r24, .r26, .r28, .r30, .r32, .r41, .r43, .r45, .r47, .r49, .r56, .r58, .r60, .r62, .r68, .r70, .r72 {
+        rotate: 60deg;
+    }
+
+    .r2, .r4, .r6, .r12, .r14, .r16, .r18, .r25, .r27, .r29, .r31, .r33, .r40, .r42, .r44, .r46, .r48, .r55, .r57, .r59, .r61, .r67, .r69, .r71 {
+        rotate: -60deg;
+    }
     </style>
