--- a/src/gui/html/style.html
+++ b/src/gui/html/style.html
@@ -1,4 +1,9 @@
 <style>
+html, body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
     :root {
         --r1: calc(var(--r2) * 2/sqrt(3));
         --r2: 10%;
@@ -47,6 +52,15 @@
     }
     .hex[resource="5"] {
         fill: #7d9ea7;
+    }
+
+    .ghost {
+        position: absolute;
+        z-index: 1;
+        scale: 1.5;
+        translate: 27% -62%;
+        opacity: 0.7;
+        width: calc(var(--r2) * 0.705);
     }
 
     .h1{
@@ -130,10 +144,10 @@
         position: absolute;
         display: flex;
         font-size: 4vmin;
-        transform: translate(-50%, -50%);
-        border-radius: 29%;
-        height: 6%;
-        width: 8%;
+        transform: translate(-50%, -20%);
+        border-radius: 35%;
+        height: 6.8%;
+        width: 8.5%;
         background-color: #f7f7f7;
         justify-content: center;
         align-items: center;
@@ -142,28 +156,33 @@
         user-select: none;
     }
     .number-token[number="2"]:after, .number-token[number="12"]:after{
+        font-weight: normal;
         content: "\2022";
     }
     .number-token[number="3"]:after, .number-token[number="11"]:after{
+        font-weight: normal;
         content: "\2022\2022";
     }
     .number-token[number="4"]:after, .number-token[number="10"]:after{
+        font-weight: normal;
         content: "\2022\2022\2022";
     }
     .number-token[number="5"]:after, .number-token[number="9"]:after{
+        font-weight: normal;
         content: "\2022\2022\2022\2022";
     }
     .number-token[number="6"]:after, .number-token[number="8"]:after{
+        font-weight: normal;
         content: "\2022\2022\2022\2022\2022";
     }
     .number-token:after {
         position: absolute;
         font-family: serif;
-        bottom: -5%;
+        bottom: 0;
         font-size: 2vmin;
     }
     .number-token[number="6"], .number-token[number="8"]{
-        color: rgb(255, 0, 34);
+        color: rgb(225 28 28)
     }
     .building {
         position: absolute;
@@ -177,24 +196,24 @@
         border-width: 2px;
         opacity: 1;
         transform-origin: top left;
-        transition: scale 0.2s;
+        
     }
 
     .building.neutral:hover {
         scale: 1.1;
+        opacity: 0.4;
     }
 
     .building.p1 {
         background-color: var(--p1-color);
-        border: #fffC solid;
     }
     .building.p2 {
         background-color: var(--p2-color);
-        border: #fffC solid;
     }
     .building.neutral {
         background-color: #fff;
-        opacity: 0.3;
+        opacity: 0;
+        transition: all 0.2s;
     }
     .road {
         position: absolute;
@@ -213,8 +232,13 @@
         background-color: var(--p2-color);
     }
     .road.neutral {
-        background-color: #bbb;
-        opacity: 0.3;
+        background-color: #ccc;
+        opacity: 0;
+        transition: all 0.2s;
+    }
+
+    .road.neutral:hover {
+        opacity: 0.8;
     }
 
     .n2 {
@@ -537,18 +561,21 @@
         right: -18vw;
     }
     .sidebar-right .toggle-btn {
+        font-family: 'Font Awesome 7 Pro';
+        font-weight: bold;
         position: absolute;
-        left: -2.5vw;
-        top: 2vw;
-        background: #2a88bc;
+        left: -1.8em;
+        top: 0.3em;
+        background: #89a1a7;
         color: #fff;
         border: none;
-        border-radius: 0.7vmin;
-        cursor: pointer;
-        padding: 0.5vmin 1.2vmin;
-        font-size: 1.3vmin;
+        border-radius: 0.4em;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        padding: 0.3em 0.4em;
+        font-size: 1.5em;
         z-index: 11;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.07);
     }
     .sidebar h2, .sidebar-right h2 {
         margin-top: 0;
@@ -651,5 +678,296 @@
     .dice-indicator .dice-icon {
         font-size: 2em;
         margin-right: 0.3em;
+    }
+
+    /* Debug container styles */
+    .debug-container {
+        position: fixed;
+        top: 5vh;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80vw;
+        max-width: 1200px;
+        height: 85vh;
+        background: rgba(0, 0, 0, 0.95);
+        color: #fff;
+        border: 1px solid #00ff00;
+        border-radius: 10px;
+        z-index: 1000;
+        font-family: 'Courier New', monospace;
+        font-size: 1.2vmin;
+        overflow-y: auto;
+        padding: 20px;
+        display: none;
+        box-shadow: 0 0 30px rgba(0, 255, 0, 0.3);
+    }
+
+    .debug-container.show {
+        display: block;
+    }
+
+    .debug-header {
+        text-align: center;
+        font-size: 2.5vmin;
+        color: #00ffff;
+        margin-bottom: 20px;
+        text-shadow: 0 0 10px #00ffff;
+    }
+
+    .debug-section {
+        margin-bottom: 25px;
+        border: 1px solid #333;
+        border-radius: 5px;
+        padding: 15px;
+        background: rgba(0, 50, 0, 0.3);
+    }
+
+    .debug-section h3 {
+        color: #ffff00;
+        margin-top: 0;
+        margin-bottom: 15px;
+        font-size: 1.8vmin;
+        text-decoration: underline;
+    }
+
+    .debug-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
+
+    .debug-player {
+        border: 1px solid #555;
+        border-radius: 5px;
+        padding: 10px;
+        background: rgba(0, 0, 50, 0.2);
+    }
+
+    .debug-player h4 {
+        color: #ff8800;
+        margin-top: 0;
+        margin-bottom: 10px;
+        font-size: 1.6vmin;
+    }
+
+    .debug-bitboard {
+        font-family: 'Courier New', monospace;
+        font-size: 1.0vmin;
+        line-height: 1.2;
+        word-break: break-all;
+        color: #cccccc;
+        background: rgba(0, 0, 0, 0.5);
+        padding: 8px;
+        border-radius: 3px;
+        margin: 5px 0;
+    }
+
+    .debug-flags {
+        margin-top: 10px;
+    }
+
+    .debug-flags .flag-true {
+        color: #00ff00;
+    }
+
+    .debug-flags .flag-false {
+        color: #ff4444;
+    }
+
+    .debug-bank {
+        border: 1px solid #555;
+        border-radius: 5px;
+        padding: 10px;
+        background: rgba(50, 0, 50, 0.2);
+    }
+
+    .debug-bank h4 {
+        color: #ff00ff;
+        margin-top: 0;
+        margin-bottom: 10px;
+        font-size: 1.6vmin;
+    }
+
+    .debug-close {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        background: none;
+        border: none;
+        color: #ff4444;
+        font-size: 2.5vmin;
+        cursor: pointer;
+        padding: 0;
+        line-height: 1;
+    }
+
+    .debug-close:hover {
+        color: #ff0000;
+        text-shadow: 0 0 5px #ff0000;
+    }
+
+    .debug-instruction {
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: #888;
+        font-size: 1.1vmin;
+        text-align: center;
+    }
+
+    /* Resource selection popups */
+    .popup-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.7);
+        z-index: 2000;
+        display: none;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .popup-overlay.show {
+        display: flex;
+    }
+
+    .popup-content {
+        background: #fff;
+        border-radius: 15px;
+        padding: 30px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+        max-width: 500px;
+        width: 90%;
+        text-align: center;
+        font-family: sans-serif;
+    }
+
+    .popup-title {
+        font-size: 1.8em;
+        margin-bottom: 20px;
+        color: #333;
+        font-weight: bold;
+    }
+
+    .popup-description {
+        font-size: 1.1em;
+        margin-bottom: 25px;
+        color: #666;
+        line-height: 1.4;
+    }
+
+    .resource-grid {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 15px;
+        margin-bottom: 25px;
+    }
+
+    .resource-option {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 15px;
+        border: 2px solid #ddd;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: all 0.2s;
+        background: #f9f9f9;
+    }
+
+    .resource-option:hover {
+        border-color: #007acc;
+        background: #f0f8ff;
+        transform: translateY(-2px);
+    }
+
+    .resource-option.selected {
+        border-color: #007acc;
+        background: #e6f3ff;
+        box-shadow: 0 0 10px rgba(0, 122, 204, 0.3);
+    }
+
+    .resource-icon {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        margin-bottom: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
+        color: white;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    }
+
+    .resource-icon.wood { background: #0c5517; }
+    .resource-icon.brick { background: #e46f52; }
+    .resource-icon.sheep { background: #94d752; }
+    .resource-icon.wheat { background: #ddcc66; }
+    .resource-icon.ore { background: #7d9ea7; }
+
+    .resource-name {
+        font-size: 0.9em;
+        font-weight: 500;
+        color: #333;
+    }
+
+    .popup-buttons {
+        display: flex;
+        gap: 15px;
+        justify-content: center;
+    }
+
+    .popup-btn {
+        padding: 12px 25px;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 1em;
+        font-weight: 500;
+        transition: all 0.2s;
+        min-width: 100px;
+    }
+
+    .popup-btn.confirm {
+        background: #007acc;
+        color: white;
+    }
+
+    .popup-btn.confirm:hover {
+        background: #005a99;
+    }
+
+    .popup-btn.confirm:disabled {
+        background: #ccc;
+        cursor: not-allowed;
+    }
+
+    .popup-btn.cancel {
+        background: #f5f5f5;
+        color: #333;
+        border: 1px solid #ddd;
+    }
+
+    .popup-btn.cancel:hover {
+        background: #ebebeb;
+    }
+
+    .selected-resources {
+        margin-bottom: 20px;
+        padding: 15px;
+        background: #f8f9fa;
+        border-radius: 8px;
+        font-size: 1.1em;
+        color: #495057;
+    }
+
+    .selection-counter {
+        font-size: 0.9em;
+        color: #666;
+        margin-top: 10px;
     }
 </style>
