--- a/src/gui/html/style.html
+++ b/src/gui/html/style.html
@@ -726,11 +726,11 @@ html, body {
         height: 1em;
         fill: currentColor;
         transition: transform 0.3s ease;
-        transform: rotate(180deg);
+        transform: scale(-1)
     }
 
     .sidebar-right .toggle-btn.flipped svg {
-        transform: rotate(0deg);
+        transform: scale(1);
     }
 
     .sidebar h2, .sidebar-right h2 {
